--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,20 @@
-name: MarkBind Action
-
+name: Deploy MarkBind Site
 on:
   push:
-    branches:
-      - main
+    branches: master
 
 jobs:
-  build_and_deploy:
+  build:
     runs-on: ubuntu-latest
+    name: test
+    permissions:
+      contents: write
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: Build & Deploy MarkBind site
-        uses: MarkBind/markbind-action@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          rootDirectory: "./docs"
-          baseUrl: "/pdfix"
-          version: "^5.5.2"
+          node-version: "16"
+      - run: npm i -g markbind-cli
+      - run: markbind deploy --ci
