--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,18 @@
-name: Deploy MarkBind Site
+name: MarkBind Action
+
 on:
   push:
-    branches: master
+    branches:
+      - master
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
-    name: test
-    permissions:
-      contents: write
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Build & Deploy MarkBind site
+        uses: MarkBind/markbind-action@v2
         with:
-          node-version: "16"
-      - run: npm i -g markbind-cli
-      - run: markbind deploy --ci
+          token: ${{ secrets.GITHUB_TOKEN }}
+          rootDirectory: "./docs"
+          baseUrl: "/pdfix" # assuming your repo name is tp
+          version: "^5.5.2"
