--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@
 # All documentation materials
 illustration/
 
+# MacOS custom attributes files created by Finder
+.DS_Store
 docs/_site/
 docs/_markbind/logs/
